# templates

./: CLAUDE.md  README.md  config.yaml  create
python-project/: .gitignore  Makefile  README.md  init.sh
python-project/tests/: test_config.py
python-r-project/: .Rprofile  .gitignore  Makefile  README.md  init.sh  pyproject.toml
python-r-project/R/: config.R  load_data.R
python-r-project/project_name/: config.py
python-r-project/tests/: test_config.py
quarto-site/: .gitignore  _quarto.yml  index.qmd  new  styles.css
quarto-site/_site/: index.html  listings.json  search.json
quarto-site/_site/abstracts/: index.html
quarto-site/_site/abstracts/example-abstract/: index.html
quarto-site/_site/papers/: index.html
quarto-site/_site/papers/example-paper/: index.html  v1-draft.html  v2-submitted.html
quarto-site/_site/presentations/: index.html
quarto-site/_site/presentations/example-talk/: index.html
quarto-site/_site/progress/: example-update.html  index.html
quarto-site/abstracts/: index.qmd
quarto-site/abstracts/example-abstract/: index.qmd
quarto-site/papers/: collab  convert  index.qmd  reference.docx
quarto-site/papers/example-paper/: _metadata.yaml  index.qmd  v1-draft.qmd  v2-submitted.qmd
quarto-site/presentations/: index.qmd
quarto-site/presentations/example-talk/: index.qmd
quarto-site/progress/: example-update.qmd  index.qmd
r-project/: .gitignore  .gitignore_template  README.md  apptainer.def  create_data_project.R  create_project.sh  init.sh
r-project/R/: load_data.R
